docs/apim/4.12/kafka-gateway/README.md
---
description: Configuration guide for kafka gateway.
metaLinks:
  alternates:
    - ./
---

# Kafka Gateway

The Gravitee Kafka Gateway applies Gravitee's API management capabilities directly to native Kafka to address the security, cost, and scalability issues that exist in traditional Kafka deployments.

With the Kafka Gateway, you can apply [policies](create-and-configure-kafka-apis/configure-kafka-apis/policies.md) on native Kafka topics at runtime. These policies are designed for Kafka-specific use cases. For example, you can easily restrict topic access to approved tenants or require client certificates for mTLS as an additional security layer.

Kafka APIs support multi-tenant endpoint configurations, allowing a single API definition to route to different backend clusters based on gateway tenant assignment. For details, see [Multi-tenant endpoint support](create-and-configure-kafka-apis/configure-kafka-apis/endpoints.md#multi-tenant-endpoint-support).

The Kafka Gateway is linked to Gravitee's Developer Portal to facilitate topic availability and knowledge sharing. For example, you can publish [documentation](create-and-configure-kafka-apis/configure-kafka-apis/documentation.md) on Kafka topics, infrastructure, and client connections, or use a self-service mechanism to manage [subscriptions](subscriptions.md) to Kafka topics.

The Kafka Gateway natively supports the Kafka protocol and is treated like a traditional Kafka broker by consumers and producers. As a Gravitee user, you expose Kafka topics using the Gravitee concept of an API, called a [Kafka API](create-and-configure-kafka-apis/create-kafka-apis.md#introduction). However, consumers and producers see a regular client connection to a Kafka bootstrap server, so don't need to change existing application logic.

You can expose multiple Kafka topics within a single Kafka API, and expose multiple Kafka APIs through the Gravitee Kafka Gateway. Using the Kafka Gateway, data is processed in real time, and virtual topics and partitions enable scalable, cost-effective deployments.

## Kafka Virtual Clusters

Kafka Virtual Clusters enable you to present multiple backend Kafka clusters as a single unified cluster to client applications. A virtual cluster is a fan-out wrapper that aggregates multiple backend Kafka clusters into one virtual cluster. The gateway merges metadata from all backend clusters, rewrites broker IDs into non-overlapping virtual ranges, and routes client requests to the appropriate backend based on topic ownership.

Each backend cluster is assigned a range of 10,000 virtual broker IDs. The gateway uses the formula `virtualBrokerId = (clusterIndex + 1) * 10000 + realBrokerId` to map real broker IDs to virtual IDs. The maximum number of clusters is 214,748, and each backend cluster must expose fewer than 10,000 brokers.

Virtual clusters support consumer group multiplexing (classic protocol with range or round-robin assignors only), idempotent producer session management, and SASL credential delegation across backends. Transactions, share groups, and ACL operations are not supported on virtual clusters.

For details on configuring and using virtual clusters, see [Configure the Kafka Client & Gateway](configure-the-kafka-client-and-gateway.md).

To learn more about the Kafka Gateway, see the following articles:

<table data-view="cards"><thead><tr><th></th><th data-hidden data-card-target data-type="content-ref"></th></tr></thead><tbody><tr><td>Configure the Kafka Client &#x26; gateway</td><td><a href="configure-the-kafka-client-and-gateway.md">configure-the-kafka-client-and-gateway.md</a></td></tr><tr><td>Create &#x26; Configure Kafka APIs</td><td><a href="create-and-configure-kafka-apis/">create-and-configure-kafka-apis</a></td></tr><tr><td>Plans</td><td><a href="plans.md">plans.md</a></td></tr><tr><td>Applications</td><td><a href="applications.md">applications.md</a></td></tr><tr><td>Subscriptions</td><td><a href="subscriptions.md">subscriptions.md</a></td></tr><tr><td>Other ways Gravitee supports Kafka</td><td><a href="other-ways-gravitee-supports-kafka.md">other-ways-gravitee-supports-kafka.md</a></td></tr></tbody></table>
